--- a/src/preferences/Preferences.css
+++ b/src/preferences/Preferences.css
@@ -1,3 +1,7 @@
+.preferences-header {
+   font-family: 'Oswald', sans-serif;
+   font-size: 40px;
+}
 label {
    font-size: 20px;
 }
@@ -7,13 +11,82 @@ th {
 }
 table {
    margin: 0 auto;
-   border: 1px solid grey;
+   border-top: 1px solid grey;
    padding: 30px;
    width: 700px;
+}
+.water {
+   width: 160px;
 }
 tbody {
    text-align: left;
 }
-input.btn {
-   border-radius: none;
+.food-table {
+   width: 150px;
+}
+.other-table {
+   width: 100px;
+}
+.container {
+   display: block;
+   position: relative;
+   padding-left: 35px;
+   margin-bottom: 12px;
+   font-size: 22px;
+   -webkit-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}
+/* Style from W3
+/* Hide the browser's default checkbox */
+.container input {
+   position: absolute;
+   opacity: 0;
+   cursor: pointer;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+   position: absolute;
+   top: 0;
+   left: 0;
+   height: 25px;
+   width: 25px;
+   background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+   background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+   background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+   content: "";
+   position: absolute;
+   display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+   display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+   left: 9px;
+   top: 5px;
+   width: 5px;
+   height: 10px;
+   border: solid white;
+   border-width: 0 3px 3px 0;
+   -webkit-transform: rotate(45deg);
+   -ms-transform: rotate(45deg);
+   transform: rotate(45deg);
 }
