--- a/src/signup/Signup.css
+++ b/src/signup/Signup.css
@@ -1,8 +1,36 @@
 .signup {
-  display: block;
+  display: flex;
   text-align: center;
+  flex-direction: column;
+  width: 800px;
+}
+
+.signupHeader {
+  font-family: "Oswald", sans-serif;
+  height: 100%;
 }
 
 .form {
-  margin: 0 auto;
+  height: 600px;
+  width: 800px;
+  font-size: 25px;
+}
+
+.field {
+  margin-right: 30px;
+}
+
+input {
+  border-radius: 5px;
+}
+
+.submit {
+  padding: 5px;
+  font-size: 15px;
+}
+
+.formItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
