--- a/src/preferences/Preferences.css
+++ b/src/preferences/Preferences.css
@@ -1,6 +1,7 @@
 .preferences-header {
    font-family: 'Oswald', sans-serif;
    font-size: 35px;
+   text-align: center;
 }
 label {
    font-size: 20px;
@@ -123,4 +124,5 @@ textarea {
    border: 1px solid grey;
    border-radius: 10px;
    outline: none;
+   margin: 0 25% 40px;
 }
