--- a/src/signup/Signup.css
+++ b/src/signup/Signup.css
@@ -1,4 +1,4 @@
-.signup {
+/* .signup {
   display: flex;
   text-align: center;
   flex-direction: column;
@@ -34,4 +34,51 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
+} */
+.signup {
+  margin: 0 auto;
+}
+label.field {
+  text-align: left;
+}
+.material-icons {
+  vertical-align: middle;
+  margin-bottom: 5px;
+  padding-right: 8px;
+}
+/* .formItem-dr {
+  text-align: center;
+} */
+.signupHeader {
+  font-family: "Oswald", sans-serif;
+  text-align: center;
+}
+.form {
+  margin: 0 auto;
+  width: 600px;
+  text-align: center;
+  margin-bottom: 45px;
+}
+.formItem label {
+  padding-right: 10px;
+}
+input.mile-input.signUp-input {
+  width: 500px;
+}
+input.mile-input.signUp-input-firstname {
+  margin-right: 25px;
+  width: 230px;
+}
+input.mile-input.signUp-input-lastname {
+  width: 230px;
+}
+input.submit {
+  margin-top: 20px;
+  border: none;
+  border-radius: 5px;
+  width: 200px;
+  color: white;
+  background: rgb(29, 179, 104);
+  font-size: 20px;
+  padding: 8px;
 }
